Upgrade to SVN 5651