@@ -1,4 +1,4 @@
-/* Copyright (c) 2001-2015, The HSQL Development Group
+/* Copyright (c) 2001-2016, The HSQL Development Group
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -57,7 +57,7 @@ import org.hsqldb.types.Type;
  * corresponds to ScriptWriterText.
  *
  * @author Fred Toussi (fredt@users dot sourceforge.net)
- *  @version 2.3.3
+ *  @version 2.3.4
  *  @since 1.7.2
  */
 public class ScriptReaderText extends ScriptReaderBase {
@@ -70,14 +70,14 @@ public class ScriptReaderText extends ScriptReaderBase {
     RowInputTextLog rowIn;
     boolean         isInsert;
 
-    ScriptReaderText(Database db) {
-        super(db);
+    ScriptReaderText(Database db, String fileName) {
+        super(db, fileName);
     }
 
     public ScriptReaderText(Database db, String fileName,
                             boolean compressed) throws IOException {
 
-        super(db);
+        super(db, fileName);
 
         inputStream =
             database.logger.getFileAccess().openInputStreamElement(fileName);
@@ -146,7 +146,7 @@ public class ScriptReaderText extends ScriptReaderBase {
                                 ErrorCode.ERROR_IN_SCRIPT_FILE,
                                 ErrorCode.M_DatabaseScriptReader_read,
                                 new Object[] {
-                    Integer.toString(lineCount) + " "
+                    Long.toString(lineCount) + " "
                     + database.getCanonicalPath(),
                     result.getMainString()
                 });
@@ -179,8 +179,8 @@ public class ScriptReaderText extends ScriptReaderBase {
                         String schema = session.getSchemaName(currentSchema);
 
                         currentTable =
-                            database.schemaManager.getUserTable(session,
-                                tablename, schema);
+                            database.schemaManager.getUserTable(tablename,
+                                schema);
                         currentStore =
                             database.persistentStoreCollection.getStore(
                                 currentTable);
@@ -197,8 +197,6 @@ public class ScriptReaderText extends ScriptReaderBase {
                                       statement);
                 }
             }
-
-            database.setReferentialIntegrity(true);
         } catch (Throwable t) {
             database.logger.logSevereEvent("readExistingData failed "
                                            + lineCount, t);
@@ -206,16 +204,16 @@ public class ScriptReaderText extends ScriptReaderBase {
             throw Error.error(t, ErrorCode.ERROR_IN_SCRIPT_FILE,
                               ErrorCode.M_DatabaseScriptReader_read,
                               new Object[] {
-                new Integer(lineCount), t.toString()
+                Long.valueOf(lineCount), t.toString()
             });
+        } finally {
+            database.setReferentialIntegrity(true);
         }
     }
 
     public boolean readLoggedStatement(Session session) {
 
         if (!sessionChanged) {
-
-            //fredt temporary solution - should read bytes directly from buffer
             try {
                 rawStatement = dataStreamIn.readLine();
             } catch (EOFException e) {
@@ -254,7 +252,7 @@ public class ScriptReaderText extends ScriptReaderBase {
 
         sessionChanged = false;
 
-        rowIn.setSource(statement);
+        rowIn.setSource(session, statement);
 
         statementType = rowIn.getStatementType();
 
@@ -279,8 +277,7 @@ public class ScriptReaderText extends ScriptReaderBase {
         String name   = rowIn.getTableName();
         String schema = session.getCurrentSchemaHsqlName().name;
 
-        currentTable = database.schemaManager.getUserTable(session, name,
-                schema);
+        currentTable = database.schemaManager.getUserTable(name, schema);
         currentStore =
             database.persistentStoreCollection.getStore(currentTable);
 
